[package]
name = "dev-dungeon-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
clap = { version = "4.5.17", features = ["derive"] }
diesel = { version = "2.2.4", features = ["sqlite"] }
dotenvy = "0.15.7"
lazy_static = "1.5.0"
once_cell = "1.20.0"
parking_lot = "0.12.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serenity = "0.12.2"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["ansi", "env-filter", "registry"] }
